# MTL_MANU

./: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  teste.txt
MTL_MANU/: pyproject.toml
MTL_MANU/tests/: test_abertura_chamado.html  test_tela_inicio.html
base_templates/global/: base.html
basic_django/: settings.py  urls.py  wsgi.py
contact/: __init__.py  admin.py  models.py  urls.py
contact/forms/: area_forms.py  chamado_forms.py  create_user.py  empresa_forms.py  tarefa_forms.py
contact/migrations/: 0001_initial.py  0002_remove_usuario_date_joined_alter_usuario_email_and_more.py  0003_usuario_tipo_usuario_alter_usuario_empresa_and_more.py  0004_usuario_criado_por.py  0005_empresa_criado_por_alter_usuario_empresa.py  0006_tarefa_chamado_area_chamado_and_more.py  0007_chamado_empresa_chamado_prestadora_servico_and_more.py  0008_area_alter_chamado_area_chamado_alter_tarefa_area.py  0009_alter_area_nome.py  0010_remove_area_descricao_alter_area_nome_and_more.py  0011_remove_chamado_usuario_telefone.py  0012_remove_chamado_usuario.py  0013_chat_mensagemchat.py  0014_alter_mensagemchat_options_and_more.py  0015_detalhetarefa.py  0016_detalhetarefapreenchido_delete_imagemchamado.py  0017_alter_chamado_tarefa.py  0018_imagem.py  0019_imagem_tipo_imagem.py  0020_chamado_status_chamado.py  0021_rename_status_chamado_chamado_status_chamado.py  0022_area_empresa_alter_area_nome_and_more.py  0023_alter_usuario_tipo_usuario.py  0024_empresa_filial_de.py  0025_imagemchamado.py  0029_chamado_data_fim_chamado_and_more.py  (+14 more)
scripts/: commands.sh
(+220 files in other folders)
